k8s/templates/rabbit/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: yc-rabbit
  name: yc-rabbit
spec:
  ports:
  - name: "5672"
    port: 5672
    targetPort: 5672
  selector:
    io.kompose.service: yc-rabbit
