k8s/templates/rabbit/rabbitmq-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq
spec:
  podSelector:
    matchLabels:
      io.kompose.network/rabbitmq: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/rabbitmq: "true"
  egress:
    - to:
        - podSelector:
            matchLabels:
              io.kompose.network/rabbitmq: "true"
    - to:
        - namespaceSelector: { }
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
